# RAG_Implementations

./: README.md  pyproject.toml  requirements.txt
Data_Ingest_Parsing/: Data_Ingestion.ipynb  Data_Parsing_Pdf.ipynb  Data_Parsing_WordDoc.ipynb  Data_Parsing_csv_excel.ipynb  Json_parsing.ipynb
Data_Ingest_Parsing/data/structured_files/: inventory.xlsx
Data_Ingestion_And_Data_Parsing_Techinques/: main.py  pyproject.toml
Data_Ingestion_And_Data_Parsing_Techinques/0-DataIngestParsing/: 1-dataingestion.ipynb
Data_Ingestion_And_Data_Parsing_Techinques/0-DataIngestParsing/data/text_files/: machine_learning_intro.txt  python_introduction.txt
Toji/Web Development/Timepass/: README.md  landingpage.css  landingpage.html
Toji/Web Development/Timepass/src/: landingpage.css  landingpage.html
Vector_Embeddings/: Hugging_Face_Embeddings.ipynb  OpenAi_Embeddings.ipynb  embeddings.ipynb
Vector_Stores_And_Vector_Databases/: ChromaDB.ipynb
